prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/async_in_table_rejected.diag.txt
ERROR: 'async' is only allowed on class methods, not table members
testData/diagnostics/async_in_table_rejected.nut:3:2

let t = {
  async function foo() {
  ^----
    return 1


